<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:id="@+id/firstrun"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<TextView
		android:id="@+id/Title"
		android:layout_width="66dp"
		android:layout_height="34dp"
		android:text="@string/login_title"
		android:textSize="24sp"
		android:layout_gravity="center_horizontal" />
	<TableLayout
		android:id="@+id/infoTable"
		android:layout_width="fill_parent"
		android:layout_height="216dp"
		android:orientation="vertical">		
		<TableRow
			android:id="@+id/userRow"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/user"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/user_text" />
			<EditText
				android:id="@+id/userField"
				android:layout_width="246dp"
				android:layout_height="wrap_content"
				android:inputType="text"				
				android:textSize="18sp" />
		</TableRow>		
		<TableRow
			android:id="@+id/passRow"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/pass"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/pass_text" />
			<EditText
				android:id="@+id/passField"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="textPassword"
				android:textSize="18sp" />
		</TableRow>
		<TableRow
			android:id="@+id/pinRow"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
		<TextView
			android:id="@+id/pin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pin_text" />
		<EditText
			android:id="@+id/pinField"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:hint="@string/pin_hint"
			android:textSize="18sp"
			android:inputType="textPassword"/>
		</TableRow>		
		<TableRow
			android:id="@+id/rememberRow"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/blank"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			<CheckBox
				android:id="@+id/remember"
				android:layout_width="119dp"
				android:layout_height="wrap_content"
				android:text="@string/remember_text" />
		</TableRow>
	</TableLayout>
	<Button
		android:id="@+id/login_btn"
		android:layout_width="125dp"
		android:layout_height="wrap_content"
		android:text="@string/login_btn_text"
		android:gravity="center"
		android:layout_gravity="center_horizontal"
	/>
</LinearLayout>